--- a/src/mtgen/wwwroot/util/card-data-importer.html
+++ b/src/mtgen/wwwroot/util/card-data-importer.html
@@ -31,6 +31,11 @@
         <input id="url-card-data" size="100" />
         <br />
         <br />
+        <label for="html-card-data">OR copy and paste the raw card data from the page into this box (you still need the site name above):</label>
+        <br />
+        <textarea id="html-card-data" cols="100" rows="20"></textarea>
+        <br />
+        <br />
         <label for="url-images">URL from which to retrieve card images (Wizards of the Coast or mtgjson.com) <em>(If none supplied or no image match found, it'll use the card data image above. If no image at all, it'll generate a placeholder card.)</em>:</label>
         <br />
         <input id="url-images" size="100" />
@@ -78,6 +83,7 @@
             $('input#import').on('click', function () {
                 cardDataImporter.loadAndProcessAllFiles({
                     cardDataUrl: $('#url-card-data').val()
+                    , htmlCardData: $('#html-card-data').val()
                     , imagesUrl: $('#url-images').val()
                     , exceptionsUrl: $('#url-exceptions').val()
                     , exceptions: $('#exceptions').val()
