--- a/src/mtgen/wwwroot/util/importer-decklist.html
+++ b/src/mtgen/wwwroot/util/importer-decklist.html
@@ -35,7 +35,7 @@
 			</tr>
 			<tr>
 				<td><label for="cards-json">cardsMain.json file (optional) to match incoming cards against:</label></td>
-				<td><input id="cards-json" size=100 /> <em>eg: http://copper-dog.com/mtg-generator/2015-core/cardsMain.json</td>
+				<td><input id="cards-json" size=100 /> <em>eg: http://copper-dog.com/mtg-generator/2015-core/cardsMain.json</em></td>
 			</tr>
 		</table>
 		<br/>
